dctrl-tools (2.22) UNRELEASED; urgency=low

  * debian/copyright: Upgraded to copyright-format/1.0, and updated.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 21 Apr 2012 11:32:47 +0300

dctrl-tools (2.21.1) unstable; urgency=low

  * grep-dctrl: Remove the old dead annoying banner code.
  * grep-dctrl: Hardcode default input file names.
      - The /etc/grep-dctrl.rc conffile is removed upon package upgrade.
      - grep-dctrl.1.cp: Updated to match.
  * grep-dctrl.1.cp: Fix indentation.
  * Update Standards-Version to 3.9.3 with no other changes needed.

  [ Program translations ]
  * Danish, by Joe Hansen (closes: #654519, #664157).
  * German, by Gerfried Fuchs.
  * Japanese, by Noritada Kobayashi.
  * Russian, by Yuri Kozlov (closes: #663608).
  * English – United Kingdom removed.
  * French, by David Prévot.
  * Catalan, by Jordi Mallach.
  * Spanish, by Javier Fernández-Sanguino (closes: #664963).
  * Czech, by Miroslav Kure (closes: #665365).
  * Finnish, by Antti-Juhani Kaijanaho.

  [ Documentation translations ]
  * French, by David Prévot.
  * German, by Chris Leick (closes: #664783).

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 31 Mar 2012 21:10:48 +0300

dctrl-tools (2.20.1) unstable; urgency=low

  [ Antti-Juhani Kaijanaho ]
  * Handle multiple instances of the same field gracefully.  No string changes.
    Closes: #652034 (reported by myself)

  [ David Prévot ]
  * Man pages order in SEE ALSO, thanks to Chris Leick (closes: #651219).
  * Consistently avoid use of CS vocabulary.
  * Keep previous msgids of translated messages.
  * Handle two missing translatable strings.
  * Use of Policy compliant relations.
  * Runtime strings review by Justin B Rye.

  [ Program translations ]
  * Catalan, by Jordi Mallach (closes: #652083).
  * English – United Kingdom, by Jeff Bailes.
  * French, by David Prévot.
  * German, by Gerfried Fuchs.
  * Spanish, by Javier Fernández-Sanguino (closes: #651409).
  * Russian, by Yuri Kozlov (closes: #651444).