@@ -1,8 +1,11 @@
 dctrl-tools (2.22) UNRELEASED; urgency=low
 
   * debian/copyright: Upgraded to copyright-format/1.0, and updated.
-
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 21 Apr 2012 11:32:47 +0300
+  * grep-dctrl: Allow distributing atom modifiers over a parenthesed predicate.
+    Closes: #319760 (allow -F modifiers to apply to an entire expression)
+    Reported by Enrico Zini <enrico@debian.org>
+  
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 22 Apr 2012 22:09:30 +0300
 
 dctrl-tools (2.21.1) unstable; urgency=low
 
